--- a/mirza.css
+++ b/mirza.css
@@ -46,7 +46,7 @@ filter: blur(1px);
     margin-bottom: 3px;
     grid-gap:450px;
     margin-top: -100px;
-    background-color: rgba(11, 11, 11, 0.306);
+    background-color: rgba(215, 0, 0, 0.306);
 }
 .logo{
 padding-top: 250px;
@@ -55,13 +55,15 @@ padding-top: 250px;
 .logo img{
     border-style: double;
     padding: 3px;
-    height: 400px;
+    height:400px;
     width: 400px;
     border-radius: 550px;
     border: 5px solid rgb(15, 15, 15);
 }
 .logo img:hover{
-transform: scaleX(103%);
+transform: scale(1.025);
+transition: all 0.5s ease-in-out;
+
 }
 .content{
     align-items: center;
@@ -149,10 +151,10 @@ font-family: 'Bree Serif', serif;
 }
 .skills{
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.586);
+    background-color: rgb(112, 114, 117,0.75);
     font-weight:400;
     margin-bottom: 2px;
-    padding: 50px;
+    /* padding: 50px; */
 }
 .skills-header{
     align-items: center;
@@ -190,11 +192,11 @@ width: 0%;
     justify-content: space-between;
 }
 .skill-main{
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(2,1fr);
     color: rgba(49, 64, 177, 0.888);
     grid-column-gap: 15px;
-    grid-gap: 50px;
+    grid-gap: 50px; */
 }
 #mywork{
     align-items: center;
@@ -225,7 +227,8 @@ width: 0%;
     position: relative;
 }
 .card-body img:hover{
-    transform:scalex(120%);
+    transform:scale(1.1);
+    transition: all 0.5s ease-in-out;
     opacity: 0.9;
     
 }
@@ -249,24 +252,27 @@ width: 0%;
     right: 20px;
     bottom: 20px;
     position: fixed;
-    background-color: #1c1c1c9e;
+    background-color:transparent;
     width: 40px;
     height: 40px;
     text-align: center;
     justify-items: center;
-    border: 2px solid white;
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 20px;
-    color: #eee;
+    color: #000000;
 }
 .top span{
     font-size: 25px;
+    
 }
 .top:hover{
-    background-color: #009bde;
-    transform: translateY(-1px);
+    background-color: #555353cd;
+    transform: scale(1.025);
     transition: .5s;
     border-radius: 550px;
     border: 1px solid rgb(0, 0, 0);
+    transition: all 0.2s ease-in-out;
+
 }
 
 #socialmedia a{
@@ -285,28 +291,35 @@ border-radius: 20px;
 }
 #socialmedia-menu :first-child span:hover{
     background-color: #098f45b0;
+    transition: all 0.25s ease-in-out;
 
 }
 #socialmedia-menu :nth-child(2) span:hover{
     background-color: #4158D0;
     background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);  
+    transition: all 0.5s ease-in-out;
 }
 #socialmedia-menu :nth-child(3) span:hover{
     background-color:rgba(255, 255, 255, 0.45);
     color:black;
+    transition: all 0.5s ease-in-out;
 }
 #socialmedia-menu :nth-child(4) span:hover{
     background-color: #009bde83;
+    transition: all 0.5s ease-in-out;
 }
 #socialmedia-menu :nth-child(6) span:hover{
     background: rgb(135,82,196);
     background: linear-gradient(90deg, rgba(135,82,196,1) 0%, rgba(252,52,54,1) 100%);
+    transition: all 0.5s ease-in-out;
 }
 #socialmedia-menu :nth-child(7) span:hover{
     background-color: #009bde;
+    transition: all 0.5s ease-in-out;
 }
 #socialmedia-menu :nth-child(5) span:hover{
     background-color:#0077b5;
+    transition: all 0.5s ease-in-out;
 }
 
 
@@ -321,65 +334,23 @@ width: 100%;
 
 
             /* @media screen  */
-    
-
-@media screen and (max-width: 400px){
-    .skills{   
-         padding-right: 100px;
-         padding-top: 50px;
-         padding-left: 20px;
-    }
-    .skill-main {
-        display: flex;
-        flex-direction: column;
-        padding: 0px;
-        width: 100%;
-    }
-    .skill-iteam h3{
-        display: flex;
-        justify-content: space-between;
-    }
-    .skills-percent{
-        padding-left: 0px;
-
-    }
-    .skill-iteam h3{
-        padding-left: 15px;
-    }
-    .progress{
-        width: 120%;
-        color: red;
-    }
-     #socialmedia{
-        margin-left:-50px;
-       
-    }
-    #socialmedia-menu a{
-        padding-left: 05px;
-    }
-}
 
 
-@media screen and (max-width: 400px){
+ @media screen and (max-width: 400px){
     .name{
        margin-bottom: 20px;
-        
+        font-size: 10px;
     }
     .name h2{
         margin-top: -70px;
-       margin-left: -10px;
+       font-size: 10px;
     }
     .name2{
-        padding: auto;
-        margin: auto;
+        margin-left: -20px;
         margin-bottom: 20px;
         margin-top: 0px;
     }
-    .name2 span{
-        padding-right: 20px;
-        
-       
-    }
+
     .name p{
         padding-left: -30px;
     }
@@ -387,44 +358,89 @@ width: 100%;
         padding-left: 10px;
     }
     .role{
-        align-items:unset;
-        text-align: unset;
+        align-items:unset; 
         padding-left: -150px;
     }
     .role h3{
-        padding-left: 0px;
-        padding-right: 30px;
+        padding-right: 30px; 
         font-size: 20px;
         letter-spacing:2px;
         word-spacing: 2px;
         display: block;
         display: flex;
     }
+    .para{
+margin-left: -40px;
+
+}
+.para p{
+    font-size: 20px;
+}
     .role span{
         padding-left: 10px;
     }
+    .logo {
+        margin-left: -6px;
+    }
+    .logo img{
+  
+    }
 
-}
+    .skills{   
+        padding-right: 10px;
+        padding-top: 50px;
+        padding-left: 20px;
+   }
+   .skill-main {
+       /* display: flex;
+       flex-direction: column;
+       width: 90%; */
+   }
+   .skill-iteam h3{
+       display: flex;
+       justify-content: space-between;
+   }
+   .skills-percent{
+       /* padding-left: 0px;
+       margin-left: 40px; */
+   }
+   .skill-iteam h3{
+       padding-left: 15px;
+   }
+   .progress{
+       width: 120%;
+       color: red;
+   }
 
-@media screen and (max-width: 400px){
+   #socialmedia-menu{
+    margin-left: -20px;
+   }
+   #socialmedia-menu a{
+       padding-left: 06px;
+   }
+
+} 
+
+@media screen and (max-width: 1000px){
     .navbar-brand{
         font-size: 30px;
-        margin-right: -80px;
     }
    #About {
-        display: grid;
+        /* display: grid;
         grid-template-columns: 1fr;
-        grid-gap:0px;
-
+        grid-gap:0px; */
     }
     .para{
-        padding-right: 10px;
         margin-bottom: 170px;
-        margin-right: 30px;
+        margin-right: 50px;
 
     }
     .para p{
               width: 100%;
+    }
+    .name h2{
+        margin-top: -70px;
+
     }
     .content{
         margin-bottom: 0px;
@@ -438,8 +454,8 @@ width: 100%;
         margin-top: -420px;
         align-items: center;
         margin-bottom: 20px;
-        padding-left: 10px;
-    }
+        padding-left: 80px;
+    } 
 .logo img{
     height: 330px;
     padding: 10px;
@@ -447,14 +463,20 @@ width: 100%;
     border-style: double;
     border-radius: 550px;
     border:5px solid black;
+    margin-left: -50px;
 }
-.skills-header{
-    padding: 0px;
-    margin-left:80px;
-    margin-right: 0px;   
-}
+
 .skills-header p{
  padding-right: -50%;
     width: 100%;
+}
+.skill-main{
+    /* margin-left: -20px;
+    display: flex;
+    flex-direction: column; */
+}
+#socialmedia{
+    margin-left:-50px;
+   
 }
 }
