--- a/src/mirza.css
+++ b/src/mirza.css
@@ -264,11 +264,11 @@
     border-radius: 550px;
     border: 1px solid rgb(0, 0, 0);
 }
-footer{
+/* footer{
     cursor: not-allowed;
 height: 500px;
 width: 100%;
-}
+} */
 
 
 
